change image reference

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   
 
   function setDIWBackground(){
-    bgimg.src = "../assets/bannerbackground.jpg";
+    bgimg.src = "./assets/bannerbackground.jpg";
     bgimg.style.position = "absolute";
     bgimg.style.top = "0px";
     document.body.style.overflow = "hidden"
