fix small issue

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
      //so it will not show on the page
      //if we extend this to other days then we will need to check all dates
      if(!aocShowing && !diwShowing) document.body.style.display = "none";
-     setDIWBackground();
+     showDIWAnimation();
   }
 
   function draw() {
