closer art title

--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
 
     bannerImageArtTitle.style.fontSize = document.body.clientWidth/(bannerTitleSize+25) +"px";
     bannerImageArtTitle.innerHTML = "Artwork: <br>Our Yura Our Dalang by <a href='https://msunflower.com' target='_blank'>M. Sunflower</a>"
-    bannerImageArtTitle.style.padding ="10px 40px 0px 32px";
+    bannerImageArtTitle.style.padding ="0px 40px 0px 32px";
+    bannerImageArtTitle.style.margin ="0px 0px 20px 0px";
     
     bannerImageTitle.style.padding ="20px 40px 0px 32px";
     bannerImageTitle.style.margin ="0px";
