--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   function draw() {
     // date checks are done in setup and booleans are switched
     if(aocShowing) showAOC();
-    showDIWAnimation();
+    //showDIWAnimation();
   }
 
   function windowResized() {
